--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,48 @@
 * {
   background-color: var(--beige);
 }
+
+.screen {
+  /* background-color: blue; */
+  width: 100%;
+  height: 85vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.content-col {
+  /* background-color: red; */
+  height: 70vh;
+  width: 85rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.content-row { 
+  /* background-color: green; */
+  height: 70vh;
+  width: 85rem;
+  display: flex;
+  justify-content: space-around;
+ } 
+
+/* #left {
+background-color: blue;
+}
+
+#right {
+  background-color: blueviolet;
+}  */
+
+/* Medium devices (phones, tablet, 800px and down) */
+@media only screen and (max-width: 800px) {
+  .screen, .content-col, .content-row {
+    height: 150vh;
+  } 
+
+  .body-col {
+    height: 75vh;
+  }
+}
