--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,16 @@
 :root {
-  --beige: #F7F0DE;
+  /* --beige: #F7F0DE; */
 }
 
 * {
-  background-color: var(--beige);
+  margin: 0;
+  padding: 0;
 }
 
 .screen {
   /* background-color: blue; */
   width: 100%;
-  height: 85vh;
+  min-height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -31,13 +32,6 @@
   display: flex;
   justify-content: space-around;
  } 
-
-/* #left {
-background-color: blue;
-}
-#right {
-  background-color: blueviolet;
-}   */
 
 /* Medium devices (phones, tablet, 800px and down) */
 @media only screen and (max-width: 800px) {
