--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,165 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root {
+  --deep-purple: #030303;
+  --purple: #19224C;
+  --teal: #11F5E8;
+  --grey: rgba(250, 236, 236, 1);
+  /* --grey: rgba(255, 255, 255, 0.5); */
+
+  --m-page: 100px, 0px, 100px, 0px; 
+  --m-page-mobile: 10px 10px 0px 0px;
+
+  --fw-bold: 700;
+  --fw-semi-bold: 600; 
+  --fw-regular: 500;
+  --fw-light: 300;
+
+  --fs-1: 67px;
+  --fs-2: 50px;
+  --fs-3: 38px;
+  --fs-4: 28px;
+  --fs-5: 21px;
+  --fs-6: 16px;
+  
+  --fs-nav: var(--fs-6);
+  --fs-button: var(--fs-6);
+
+  --br-button: 238px;
+  --br-card: 15px;
+  --br-form: 5px;
+  
+  --ff-1: 'Roboto', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* Box sizing rules */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+/* Remove default margin */
+* {
+  margin: 0;
+  padding: 0;
+  font: inherit;
+  font-family: var(--ff-1);
+}
+
+/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
+ul,
+ol {
+  list-style: none;
+}
+
+/* Set core root defaults */
+html:focus-within {
+  scroll-behavior: smooth;
+}
+
+/* Set core body defaults */
+html, 
+body {
+  height: 100%;
+}
+
+body {
+  text-rendering: optimizeSpeed;
+  line-height: 1.5;
+}
+
+/* A elements that don't have a class get default styles */
+a {
+  text-decoration: none;
+}
+
+a:visited {
+  color: var(--black-100);
+}
+
+/* Make images easier to work with */
+img,
+picture,
+svg {
+  max-width: 100%;
+  display: block;
+}
+
+/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
+@media (prefers-reduced-motion: reduce) {
+  html:focus-within {
+   scroll-behavior: auto;
+  }
+  
+  *,
+  *::before,
+  *::after {
+    animation-duration: 0.01ms !important;
+    animation-iteration-count: 1 !important;
+    transition-duration: 0.01ms !important;
+    scroll-behavior: auto !important;
+  }
+}
+
+/* TODO:Utility Classes */
+
+/* TEXT */
+
+.title {
+  font-size: var(--fs-1);
+  font-weight: var(--fw-bold);
+  color: var(--grey);
+  margin-bottom: 20px;
+}
+
+.subtitle {
+  font-size: var(--fs-4);
+  font-weight: var(--fw-light);
+  color: var(--grey);
+  margin-bottom: 20px;
+}
+
+.text {
+  font-size: var(--fs-6);
+  font-weight: var(--fw-semi-bold);
+  color: var(--grey);
+}
+
+.blue-text {
+  font-size: var(--fs-6);
+  font-weight: var(--fw-semi-bold);
+  color: var(--teal);
+}
+
+/* BUTTON STYLING */
+
+.button-blue {
+  width: 200px;
+  height: 50px;
+  border-radius: 250px;
+  font-size: var(--fs-button);
+  box-shadow: 0px 5px 5px var(--black-25);
+  margin-top: 20px;
+  background-color: var(--teal);
+  color: var(--grey);
+}
+
+.button-blue:hover,
+.button-blue:focus {
+  box-shadow: 0px 8px 5px var(--black-25);
+}
+
+.button-blue:hover {
+  transform: translateY(-3px);
+  transition-duration: 0.1s;
+}
+
+.button-blue:active {
+  box-shadow: rgba(0, 0, 0, .06) 0 2px 4px;
+  transform: translateY(0);
+}
+
+/* ICONS */
+
+.blue-icon {
+  color: var(--teal);
 }
