--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,16 +1,92 @@
-#brand {
-  margin: 0;
-  position: relative;
-  left: 45%;
-  font-size: 2rem;
+/* TODO: See if you can shift nav to right without absolute */
+/* TODO: Hover effects on nav links and brand name with shadow */
+
+header {
+  /* background-color: red; */
+  height: 100px;
+  margin: 0px 100px 0px 100px;
+  display: flex;
+  border-bottom: 1px solid var(--black-25);
 }
 
-#linkedin-icon {
-  height: 3rem;
-  width: 3rem;
+/* Logo and Title */
+.brand {
+  display: flex;
+  align-items: center;
+  margin-left: 50px;
 }
 
-#menu-icon {
-  height: 3rem;
-  width: 3rem;
+#brand-title {
+  color: #ED686D;
+  font-size: var(--fs-bigger-text);
+}
+
+.logo {
+  width: 75px;
+}
+
+/* Nav Items */
+.nav {
+  /* background-color: blue; */
+  display: flex;
+  align-items: center;
+  position: absolute;
+  right: 100px;
+  top: 25px;
+  margin-right: 50px;
+}
+
+.nav-link {
+  margin-right: 10px;
+  font-size: var(--fs-nav);
+  color: var(--black-100);
+  font-weight: var(--fw-semi-bold);
+}
+
+.nav-link:hover {
+  transform: translateY(-1px);
+  transition-duration: 0.2s;
+  text-shadow: 0px 2px 5px var(--black-25);
+} 
+
+#create-nav-btn {
+  border: 1px solid var(--black-50);
+  height: 50px;
+  width: 125px;
+  margin: 0px;
+  background-color: transparent;
+  box-shadow: none;
+}
+
+#create-nav-btn:hover {
+  box-shadow: 0px 5px 5px var(--black-25);
+}
+
+@media (max-width: 50em){
+  header {
+    height: 75px;
+    margin: 0px 10px 0px 10px;
+  }
+
+  .brand {
+    margin-left: 0px;
+  }
+
+  #brand-title {
+    display: none;
+  }
+
+  .logo {
+    width: 60px;
+  }
+
+  .nav {
+    right: 10px;
+    top: 20px;
+    margin-right: 15px;
+  }
+
+  #create-nav-btn {
+  height: 40px;
+  }
 }
