--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,4 +1,44 @@
-#home-iphone-image {
-    object-fit: cover;
-    object-position: center;
+#home {
+  background-image: linear-gradient(var(--purple), var(--deep-purple));
+  width: 100%;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: center;
+}
+
+.welcome-box {
+  position: relative;
+  left: 333px;
+}
+
+/* .job {
+  width: 450px;
+  height: 150px;
+  margin-bottom: 20px;
+} */
+
+.btns-box {
+  height: 50px;
+  width: 350px;
+  /* background-color: green; */
+  display: flex;
+  align-items: center;
+  /* color: var(--teal); */
+}
+
+.action-btn {
+  width: 50px;
+  height: 50px;
+  background-color: transparent;
+  border-radius: 200px;
+  border: var(--teal);
+  box-shadow: 1px 0px 8px 1px var(--teal);
+  margin-right: 20px;
+  /* outline: var(--teal); */
+}
+
+.action-item {
+  margin-right: 20px;
 }
