--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,31 +1,22 @@
-/* TODO: See if you can shift nav to right without absolute */
-/* TODO: Hover effects on nav links and brand name with shadow */
-
 header {
-  /* background-color: red; */
+  background-color: var(--purple);
   height: 100px;
-  margin: 0px 100px 0px 100px;
   display: flex;
-  border-bottom: 1px solid var(--black-25);
 }
 
-/* Logo and Title */
+/* Branding */
 .brand {
   display: flex;
   align-items: center;
-  margin-left: 50px;
-}
-
-#brand-title {
-  color: #ED686D;
-  font-size: var(--fs-bigger-text);
+  margin-left: 100px;
+  /* background-color: blue; */
 }
 
 .logo {
   width: 75px;
 }
 
-/* Nav Items */
+/* Nav List Items */
 .nav {
   /* background-color: blue; */
   display: flex;
@@ -33,36 +24,26 @@ header {
   position: absolute;
   right: 100px;
   top: 25px;
-  margin-right: 50px;
 }
 
 .nav-link {
-  margin-right: 10px;
   font-size: var(--fs-nav);
-  color: var(--black-100);
-  font-weight: var(--fw-semi-bold);
+  color: var(--grey);
+  font-weight: var(--fw-regular);
 }
 
 .nav-link:hover {
   transform: translateY(-1px);
   transition-duration: 0.2s;
   text-shadow: 0px 2px 5px var(--black-25);
-} 
-
-#create-nav-btn {
-  border: 1px solid var(--black-50);
-  height: 50px;
-  width: 125px;
-  margin: 0px;
-  background-color: transparent;
-  box-shadow: none;
+  color: var(--teal);
 }
 
-#create-nav-btn:hover {
-  box-shadow: 0px 5px 5px var(--black-25);
+.nav-link:visited {
+  color: var(--grey);
 }
 
-@media (max-width: 50em){
+@media (max-width: 50em) {
   header {
     height: 75px;
     margin: 0px 10px 0px 10px;
@@ -70,10 +51,6 @@ header {
 
   .brand {
     margin-left: 0px;
-  }
-
-  #brand-title {
-    display: none;
   }
 
   .logo {
@@ -84,9 +61,5 @@ header {
     right: 10px;
     top: 20px;
     margin-right: 15px;
-  }
-
-  #create-nav-btn {
-  height: 40px;
   }
 }
