--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,31 +1,25 @@
 #home {
   background-image: linear-gradient(var(--purple), var(--deep-purple));
-  width: 100%;
-  min-height: 100vh;
+  min-width: 100%;
+  min-height: 90vh;
   display: flex;
   flex-direction: column;
-  align-items: start;
+  align-items: center;
   justify-content: center;
 }
 
 .welcome-box {
-  position: relative;
-  left: 333px;
+  display: flex;
+  flex-direction: column;
 }
 
-/* .job {
-  width: 450px;
-  height: 150px;
-  margin-bottom: 20px;
-} */
-
-.btns-box {
+.btn-box {
+  /* background-color: green; */
   height: 50px;
   width: 350px;
-  /* background-color: green; */
   display: flex;
+  justify-content: flex-start;
   align-items: center;
-  /* color: var(--teal); */
 }
 
 .action-btn {
@@ -36,9 +30,20 @@
   border: var(--teal);
   box-shadow: 1px 0px 8px 1px var(--teal);
   margin-right: 20px;
-  /* outline: var(--teal); */
 }
 
 .action-item {
+  position: relative;
+  top: 5px;
   margin-right: 20px;
+}
+
+@media (max-width: 800px){
+  .job {
+    font-size: var(--fs-2);
+  }
+
+  .welcome-box {
+    padding: 20px;
+  }
 }
