--- a/src/styles/work.css
+++ b/src/styles/work.css
@@ -1,68 +1,64 @@
-.work-page {
+#work {
   background-color: var(--deep-purple);
   width: 100%;
-  height: 1000px;
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
-.project-box {
+.project {
+  height: 50vh;
+  width: 100%;
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
+  align-items: center;
+  /* background-color: rgb(213, 122, 122); */
 }
 
 .project-text-box {
-  /* background-color: red; */
-  width: 400px;
+  margin-right: 80px;
+}
+
+.project-title-box, 
+.tech-box, 
+.icons-box {
+  position: relative;
+  left: 15px;
 }
 
 .details-box {
   background-color: var(--purple);
   width: 400px;
   height: fit-content;
-  padding: 5px;
+  padding: 15px;
   border-radius: var(--br-form);
+  margin-bottom: 15px;
 }
 
 .image-box {
   background-color: grey;
   height: 300px;
   width: 425px;
+  border-radius: 15px;
+  box-shadow: 0px 0px 20px 1px var(--teal);
 }
 
+/* Extra small devices (phones, 600px and down) */
+@media  screen and (max-width: 925px) {
+ .project {
+  height: 100vh;
+ }
 
-/* .project-title, 
-.project-tech,
-.project-description, 
-.live-btn,
-.github-icon {
-  margin-bottom: 1rem;
+ .project-text-box,
+ .project-title-box,
+ .details-box, 
+ .image-box {
+  /* height: 350px; */
+  width: 350px;
+ }
+ .project-text-box {
+  margin-right: 20px;
 }
 
-.project-title {
-  font-size: 5rem;
 }
-
-.project-tech {
-  font-size: 2rem;
-}
-
-.project-description {
-  font-size: 2rem;
-  font-style: italic;
-}
-
-.live-btn {
-  font-size: 1.5rem;
-  width: 7rem;
-}
-
-.github-icon {
-  height: 2rem;
-  width: 2.5rem;
-  margin-top: 1rem;
-}
-
-.project-image {
-  height: 25rem;
-} */
