--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -13,6 +13,10 @@
   flex-direction: column;
 }
 
+#name {
+  margin-bottom: 20px;
+}
+
 .btn-box {
   /* background-color: green; */
   height: 50px;
