refining style about, home

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
 :root {
-  --deep-purple: #030303;
+   --deep-purple: #030303;
   --purple: #19224C;
   --teal: #11F5E8;
+  --dark-teal: #0CB0A8;
   --grey: rgba(250, 236, 236, 1);
   --light-purple: #8C90A5;
 
