--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,7 +1,11 @@
 header {
   background-color: var(--purple);
+  /* border-bottom: 1px solid var(--deep-purple); */
   height: 100px;
   display: flex;
+  /* position: fixed; Set the navbar to fixed position */
+  /* top: 0; Position the navbar at the top of the page */
+  /* width: 100%; Full width */
 }
 
 /* Branding */
