--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -1,5 +1,32 @@
-.about-page {
+#about {
   width: 100%;
-  height: 450px;
+  height: 100vh;
   background-color: var(--deep-purple);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.about-text-area {
+  width: 50%;
+  height: fit-content;
+  margin-bottom: 40px;
+  /* background-color: grey; */
+}
+
+#about-text {
+  background-color: var(--purple);
+  padding: 15px;
+  border-radius: 15px;
+   /* box-shadow: 5px 5px 20px 2px var(--light-purple); */
+  color: var(--light-purple);
+  box-shadow: var(--dark-teal) 0px 0px 20px 0px;
+}
+
+.tech-stack-area {
+  /* background-color: red; */
+  width: 30%;
+  display: flex;
+  justify-content: space-between;
 }
