--- a/src/index.css
+++ b/src/index.css
@@ -69,12 +69,9 @@ body {
 }
 
 /* A elements that don't have a class get default styles */
-a {
+a, a:hover, a:visited {
   text-decoration: none;
-}
-
-a:visited {
-  color: var(--black-100);
+  color: var(--grey);
 }
 
 /* Make images easier to work with */
@@ -83,6 +80,10 @@ picture,
 svg {
   max-width: 100%;
   display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
 }
 
 /* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
@@ -144,7 +145,7 @@ svg {
   font-size: var(--fs-6);
   font-weight: var(--fw-semi-bold);
   color: var(--light-purple);
-  margin-bottom: 10px;
+  /* margin-bottom: 10px; */
 }
 
 /* BUTTON STYLING */
