--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -1,6 +1,6 @@
 #about {
   width: 100%;
-  height: 100vh;
+  height: 60vh;
   background-color: var(--deep-purple);
   display: flex;
   flex-direction: column;
@@ -26,7 +26,34 @@
 
 .tech-stack-area {
   /* background-color: red; */
-  width: 30%;
+  width: 50%;
+  height: fit-content;
+}
+
+#skills-list {
+  display: inline;
   display: flex;
-  justify-content: space-between;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  background-attachment: blue;
+  padding: 0px;
+}
+
+.tech-skill {
+  margin-right: 10px;
+}
+
+@media (max-width: 500px){
+  #about {
+    height: 100vh;
+  }
+
+  .about-text-area {
+    width: 80%;
+  }
+
+  .tech-stack-area {
+    width: 80%;
+  }
 }
