--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -1,7 +1,7 @@
 #contact {
-  background-image: linear-gradient(var(--deep-purple) 10%, var(--purple));
+  background-image: linear-gradient(var(--deep-purple), var(--purple));
   width: 100%;
-  height: 50vh;
+  height: 60vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -9,9 +9,13 @@
 
 .contact-area {
   /* background-color: green; */
-  width: 25%;
+  width: 30%;
   height: 80%;
   margin: 0%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
 }
 
 #contact-title {
@@ -26,12 +30,16 @@
 
 .contact-form {
   /* background-color: red; */
-  width: 25%;
+  width: 30%;
   height: 80%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* justify-content: center; */
+  justify-content: center;
+}
+
+.sent-message {
+  margin-top: 10px;
 }
 
 .email-form, 
@@ -69,18 +77,23 @@
   outline-color: var(--teal) !important;
 }
 
+
+@media  screen and (max-width: 1000px) {
+ #contact {
+  justify-content: space-around;
+ }
+}
 /* Extra small devices (phones, 600px and down) */
-@media  screen and (max-width: 925px) {
+@media  screen and (max-width: 800px) {
   #contact {
-    height: 100vh;
-    /* width: 80%; */
+    height: 125vh;
     flex-direction: column;
-    /* align-items: start; */
+    justify-content: center;
+    align-items: center;
   }
 
   .contact-area {
-    width: 75%;
-    height: 40%;
+    width: 50%;
     margin: 10%;
     display: flex;
     flex-direction: column;
@@ -92,7 +105,7 @@
   }
 
   .contact-form {
-    width: 75%;
+    width: 50%;
     height: 50%;
   }
  }
