--- a/src/styles/work.css
+++ b/src/styles/work.css
@@ -3,17 +3,15 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center;
 }
 
 .project {
-  height: 50vh;
+  height: 45vh;
   width: 100%;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  /* background-color: rgb(213, 122, 122); */
 }
 
 .project-text-box {
@@ -33,32 +31,47 @@
   height: fit-content;
   padding: 15px;
   border-radius: var(--br-form);
-  margin-bottom: 15px;
+  margin-bottom: 25px;
+  box-shadow: 0px 0px 10px 0px var(--dark-teal);
+}
+
+.project-image {
+  border-radius: 15px;
+  box-shadow: 0px 0px 10px 1px var(--teal);
 }
 
 .image-box {
-  background-color: grey;
-  height: 300px;
-  width: 425px;
+  height: 275px;
+  width: 450px;
   border-radius: 15px;
-  box-shadow: 0px 0px 20px 1px var(--teal);
+}
+
+.image-box:hover {
+  box-shadow: 0px 0px 25px 1px var(--teal);
+}
+
+@media  screen and (max-width: 1000px) {
+  .project {
+   height: 100vh;
+  }
 }
 
 /* Extra small devices (phones, 600px and down) */
-@media  screen and (max-width: 925px) {
+@media  screen and (max-width: 600px) {
  .project {
   height: 100vh;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
  }
 
- .project-text-box,
- .project-title-box,
- .details-box, 
- .image-box {
-  /* height: 350px; */
-  width: 350px;
- }
  .project-text-box {
-  margin-right: 20px;
+  margin-right: 0px;
 }
 
+.project-image, 
+.image-box {
+  height: 275px;
+  width: 95%;
+}
 }
