--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -1,5 +1,5 @@
 #contact {
-  background-image: linear-gradient(var(--deep-purple), var(--purple));
+  background-image: linear-gradient(var(--deep-purple) 1px, var(--purple));
   width: 100%;
   height: 60vh;
   display: flex;
@@ -9,9 +9,10 @@
 
 .contact-area {
   /* background-color: green; */
-  width: 30%;
+  width: 400px;
   height: 80%;
-  margin: 0%;
+  margin-right: 80px;
+  margin-left: 10px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -30,7 +31,7 @@
 
 .contact-form {
   /* background-color: red; */
-  width: 30%;
+  width: 450px;
   height: 80%;
   display: flex;
   flex-direction: column;
@@ -82,6 +83,11 @@
  #contact {
   justify-content: space-around;
  }
+
+ .contact-area {
+  margin-right: 40px;
+ }
+ 
 }
 /* Extra small devices (phones, 600px and down) */
 @media  screen and (max-width: 800px) {
@@ -107,5 +113,6 @@
   .contact-form {
     width: 50%;
     height: 50%;
+    margin-bottom: 50px;
   }
  }
