--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -14,8 +14,14 @@ header {
   margin-left: 100px;
 }
 
-.logo {
-  width: 50px;
+#brand-logo{
+  color: var(--teal);
+  font-size: var(--fs-3);
+  /* -webkit-text-fill-color: var(--purple); */
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: var(--teal);
+  text-decoration: none;
+  text-shadow: 2px 2px 20px var(--teal);
 }
 
 /* Nav List Items */
@@ -31,7 +37,8 @@ header {
   font-weight: var(--fw-semi-bold);
 }
 
-.nav-link:hover {
+.nav-link:hover, 
+#brand-logo:hover {
   transform: translateY(-1px);
   transition-duration: 0.2s;
   text-shadow: 0px 2px 5px var(--deep-purple);
