--- a/src/styles/work.css
+++ b/src/styles/work.css
@@ -29,7 +29,7 @@
   background-color: var(--purple);
   width: 400px;
   height: fit-content;
-  padding: 15px;
+  padding: 15px 15px 5px 15px;
   border-radius: var(--br-form);
   margin-bottom: 25px;
   box-shadow: 0px 0px 10px 0px var(--dark-teal);
